infrastructure/istio/sidecars/default-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default-sidecar
  namespace: platform
spec:
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
        - "observability/*"
