infrastructure/istio/sidecars/observability-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: observability-sidecar
  namespace: observability
spec:
  egress:
    - hosts:
        - "./*"
        - "platform/*"
        - "istio-system/*"
